Ajout des formes blurred et fix de styles pour la disparition des indicateurs de cover

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* STYLE DE LA SCROLLBAR */
+::-webkit-scrollbar {
+  width: 0px;
+}
